# turboeda

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: examples_full_options.ipynb  test_codes-Copy1.ipynb
turboeda/: __init__.py  cli.py  eda_report.py  io_loader.py  typerules.py
turboeda/analyzers/: categorical.py  correlation.py  datetime.py  numeric.py  summary.py
turboeda/report/: renderer.py
turboeda/report/templates/: base.html
turboeda/report/templates/sections/: correlations.html  summary.html  variables.html
turboeda/viz/: plots.py
