[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "turboeda"
version = "0.2.3"
description = "One-command EDA report generator (HTML with Plotly)."
readme = "README.md"
authors = [{name = "Tamas Rozsahegyi", email = "you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.25",
  "plotly>=5.22",
  "jinja2>=3.1",
  "chardet>=5.2",
  "openpyxl>=3.1",
  "typer>=0.12",
  "importlib-resources>=6.4; python_version<'3.11'"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
turboeda = "turboeda.cli:app"

[tool.hatch.build]
include = [
  "turboeda/**",
  "README.md",
  "LICENSE"
]

[project.urls]
Homepage = "https://github.com/rozsit/turboeda"
Documentation = "https://github.com/rozsit/turboeda#readme"
Source = "https://github.com/rozsit/turboeda"
Issues = "https://github.com/rozsit/turboeda/issues"
Changelog = "https://github.com/rozsit/turboeda/releases"
